fix gap display problem in form

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font: inherit;
+  border: none;
 }
 
 *:focus {
@@ -19,7 +21,10 @@ ul {
 }
 
 button {
-  font: inherit;
+  cursor: pointer;
+}
+button:active {
+  opacity: 0.7;
 }
 
 input {
@@ -38,7 +43,7 @@ body {
 .hf-width {
   padding: 0 2rem;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .hf-width {
     padding: 0 15rem;
   }
@@ -50,7 +55,7 @@ body {
   height: 73px;
   position: relative;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .head {
     margin-top: 4rem;
   }
@@ -74,7 +79,7 @@ body {
 .head-menu-switcher-hide {
   display: none;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .head-menu-switcher {
     display: none;
   }
@@ -112,7 +117,7 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   border-radius: 2rem;
   background-color: #2acfcf;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .head-menu-nav {
     margin-left: 2rem;
     color: gray;
@@ -143,7 +148,7 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   flex-direction: column;
   margin-right: 0;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .main-intro {
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -179,7 +184,7 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   background-color: #2acfcf;
   padding: 1rem 3rem;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .main-intro-wrapper {
     margin-left: 0;
     max-width: 52rem;
@@ -198,7 +203,7 @@ input[type=checkbox]:checked ~ .head-menu-nav {
 .main-shorten::after {
   content: "";
   position: absolute;
-  top: 14.5rem;
+  top: 13rem;
   bottom: 0;
   left: 0;
   right: 0;
@@ -208,8 +213,6 @@ input[type=checkbox]:checked ~ .head-menu-nav {
 .main-shorten-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
   padding: 2rem;
   border-radius: 1rem;
   background-color: #3b3054;
@@ -217,52 +220,37 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   background-repeat: no-repeat;
   background-position: right top;
 }
-.main-shorten-form * {
-  font-family: "Poppins", sans-serif;
-  font-size: 1.8rem;
+.main-shorten-form-input_wrapper input {
   width: 100%;
-  border: none;
+  padding: 1rem;
   border-radius: 0.5rem;
 }
-.main-shorten-form div.error-input__empty input {
-  border: 2px solid #f46262;
-}
-.main-shorten-form div.error-input__empty input::placeholder {
-  color: #f46262;
-}
-.main-shorten-form div.error-input__empty::after {
-  content: "Please add a link";
-  color: #f46262;
-  display: block;
+.main-shorten-form-input_wrapper p {
+  height: 1.5rem;
+  font-size: 1.2rem;
   font-style: italic;
-  font-size: 1.3rem;
-  line-height: 2;
+  color: #f46262;
 }
-.main-shorten-form input {
-  padding: 1.5rem;
-}
-.main-shorten-form button {
-  padding: 1.5rem;
+.main-shorten-form-button {
   font-weight: 700;
   color: white;
   background-color: #2acfcf;
-  cursor: pointer;
+  padding: 1rem;
+  border-radius: 0.5rem;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .main-shorten-form {
     flex-direction: unset;
     padding: 4rem;
     background-image: url(../images/bg-shorten-desktop.svg);
+    max-width: 1110px;
   }
   .main-shorten-form * {
     border-radius: 1rem;
   }
-  .main-shorten-form input {
-    flex: 4;
-  }
   .main-shorten-form button {
-    flex: 1;
-    margin-left: 2rem;
+    flex: 200px;
+    margin-left: 1.5rem;
   }
 }
 .main-shorten-result {
@@ -369,6 +357,7 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   background-color: #3b3054;
   background-image: url(../images/bg-boost-mobile.svg);
   background-repeat: no-repeat;
+  background-position: right;
   height: 300px;
 }
 .main-invite__title {
@@ -381,7 +370,7 @@ input[type=checkbox]:checked ~ .head-menu-nav {
   background-color: #2acfcf;
   font-weight: 700;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 480px) {
   .main-invite {
     background-image: url(../images/bg-boost-desktop.svg);
     height: 250px;
