--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font: inherit;
+    border: none;
 }
 
 *:focus {
@@ -18,7 +20,10 @@ ul {
 }
 
 button {
-    font: inherit;
+    &:active {
+        opacity: .7;
+    }
+    cursor: pointer;
 }
 
 input {
@@ -37,7 +42,7 @@ body {
 .hf {
     &-width {
         padding: 0 2rem;
-        @media screen and (min-width: $bp-large) {
+        @media screen and (min-width: $bp-small) {
             padding: 0 15rem;
         }
     }
