--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,7 +3,7 @@
     align-items: center;
     height: 73px;
     position: relative;
-    @media screen and (min-width: $bp-large) {
+    @media screen and (min-width: $bp-small) {
         margin-top: 4rem;
     }
 
@@ -26,7 +26,7 @@
             &-hide {
                 display: none;
             }
-            @media screen and (min-width: $bp-large) {
+            @media screen and (min-width: $bp-small) {
                 display: none;
             }
         }
@@ -70,7 +70,7 @@
                 }                 
             }      
 
-            @media screen and (min-width: $bp-large) {
+            @media screen and (min-width: $bp-small) {
                 margin-left: 2rem;
                 color: gray;
                 display: flex;
